-
Bug
-
Resolution: Done
-
P2: Important
-
4.7.0
-
None
-
Windows 7, 64 bits
-
304fc533bddde005ce786c4ab2da71678f89e379
My first network device is disconnected, so I get a default ip: 169.254.142.203 for the fortune server and client, but I cannot ping this ip and the fortune client hangs and prints a timeout msg.
If I change the fortune client ip to localhost or 127.0.0.1, it works.
- relates to
-
QTBUG-6869 QTcpServer (FortuneServer) Example not working on Windows 7
-
- Closed
-
-
QTBUG-11870 The fortune client example doesn't work
-
- Closed
-
| For Gerrit Dashboard: QTBUG-13121 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 16478,3 | Fortune client example - list all IP addresses | master | qt/qtbase | Status: MERGED | +2 | 0 |